--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,70 @@
 @import './common';
 @import './example';
-
+body {
+  // background-color: #c5cbd3;
+}
 .hidden {
   display: none;
+}
+.search-form {
+  background-color: #21586a;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid black;
+}
+.search-form input {
+  margin-left: 45%;
+  padding-left: 10px;
+  border-radius: 5px;
+  height: 30px;
+  border: none;
+}
+.search-form input:focus {
+  outline: none;
+}
+.search-form button {
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  font-weight: 500;
+  padding: 5px 5px 5px 5px;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 20px;
+}
+.photo-card {
+  border-radius: 5px;
+  -webkit-box-shadow: 0px -1px 17px -4px rgba(66, 68, 90, 1);
+  -moz-box-shadow: 0px -1px 17px -4px rgba(66, 68, 90, 1);
+  box-shadow: 0px -1px 17px -4px rgba(66, 68, 90, 1);
+  padding: 5px;
+}
+.info {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0px -1px 17px -11px rgba(66, 68, 90, 1);
+  -moz-box-shadow: inset 0px -1px 17px -11px rgba(66, 68, 90, 1);
+  box-shadow: inset 0px -1px 17px -11px rgba(66, 68, 90, 1);
+}
+.info-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.info-item b {
+  text-transform: capitalize;
+  text-align: center;
+  color: #21586a;
+  margin-bottom: 6px;
+}
+img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
 }
