--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,10 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid black;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
 .search-form input {
   margin-left: 45%;
@@ -34,7 +38,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 40px;
-  margin-top: 20px;
+  margin-top: 80px;
 }
 .photo-card {
   border-radius: 5px;
@@ -67,4 +71,21 @@ img {
   width: 300px;
   height: 200px;
   object-fit: cover;
+}
+.load-more {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  margin-top: 15px;
+  width: 200px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: #21586a;
+  color: white;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0.05em;
+  cursor: pointer;
 }
